--- a/frontend/src/Pages/HomePage/Home.css
+++ b/frontend/src/Pages/HomePage/Home.css
@@ -53,73 +53,9 @@
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    height: 70vh;
+    min-height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.home .container{
-    width: 60%;
-    background: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(10px);
-    border-radius: 20px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    padding: 60px 30px;
-    display: flex;
-    flex-direction: column;
-}
-
-.container .select-container select{
-    outline: none;
-    width: 100px;
-    font-size: 15px;
-    font-weight: 500;
-}
-
-.home .container .search-form{
-    margin-top: 20px;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 2fr 2fr 2fr 60px;
-    background-color: white;
-    box-sizing: border-box;
-    border: 2px solid rgb(201, 201, 201);
-}
-
-.container .search-form > div{
-    background-color: white;
-    cursor: pointer;
-    padding: 5px;
-    border-right: 1px solid rgb(180, 180, 180);
-    display: flex;
-    align-items: center;
-}
-
-.container .search-form > div:hover{
-    background-color: rgb(235, 235, 235);
-}
-
-.container .from-container > img, 
-.container .to-container > img{
-    width: 25px;
-    height: 25px;
-    margin-right: 20px;
-}
-
-.container .search-form > div span{
-    color: grey;
-}
-
-.container .search-form > div h4{
-    margin: 5px 0;
-}
-
-.container .search-container{
-    justify-content: center;
-}
-
-.container .search-container img{
-    width: 70%;
-    height: 70%;
+    margin-top: 80px;
 }
