--- a/frontend/src/Pages/HomePage/Home.css
+++ b/frontend/src/Pages/HomePage/Home.css
@@ -59,3 +59,9 @@
     align-items: center;
     margin-top: 80px;
 }
+
+@media  screen and (max-width: 500px) {
+    .home-page header ul{
+        display: none;
+    }
+}
