--- a/frontend/src/Pages/HomePage/SearchContainer.css
+++ b/frontend/src/Pages/HomePage/SearchContainer.css
@@ -26,7 +26,7 @@
     margin-top: 20px;
     width: 100%;
     display: grid;
-    grid-template-columns: 2fr 2fr 2fr 50px;
+    grid-template-columns: 2fr 2fr 1fr 0.5fr;
     background-color: white;
     box-sizing: border-box;
     border: 2px solid rgb(201, 201, 201);
@@ -34,7 +34,6 @@
 
 .container .search-form > div{
     background-color: white;
-    cursor: pointer;
     padding: 5px;
     border-right: 1px solid rgb(180, 180, 180);
     display: flex;
@@ -42,12 +41,21 @@
     position: relative;
 }
 
-.container .search-form > div:hover{
+.container .search-form > div:last-child{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container .search-form > div:not(:last-child):hover{
     background-color: rgb(235, 235, 235);
+    cursor: pointer;
 }
 
 .container .search-form .remove-btn{
     font-size: 25px;
+    width: 30px;
+    height: 30px;
     background-color: red;
     color: white;
     cursor: pointer;
@@ -127,4 +135,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media  screen and (max-width: 820px) {
+    .container{
+        width: 90%;
+    }
+
+}
+
+
+@media  screen and (max-width: 510px){
+    .container .search-form{
+        grid-template-columns: 1fr;
+    }
+
+    .container .search-form .remove-btn{
+        width: 30px;
+    }
 }
