--- a/frontend/src/Pages/AuthPages/UserLogin.css
+++ b/frontend/src/Pages/AuthPages/UserLogin.css
@@ -28,7 +28,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    width: 70%;
+    width: 450px;
     height: 70%;
     background-color: white;
     border-radius: 10px;
@@ -68,6 +68,7 @@
     background-color: red;
     height: 38px;
     width: 80%;
+    margin-top: 20px;
     border: none;
     cursor: pointer;
     color: white;
@@ -88,4 +89,28 @@
     display: flex;
     justify-content: space-between;
     margin-top: 50px;
+  }
+
+
+  @media  screen and (max-width: 1040px) {
+    .user-login-page .left-section {
+        width: 45%;
+      }
+  }
+
+  @media  screen and (max-width: 850px) {
+    .user-login-page .left-section{
+        display: none;
+    }
+
+    .user-login-page {
+        background-image: url('/icons/bg.webp');
+        background-position: center;
+        background-size: cover;
+    }
+
+    .user-login-page .right-section{
+        background-color: rgb(0, 0, 0, 0.10);
+    }
+
   }
