--- a/frontend/src/Pages/AuthPages/UserLogin.css
+++ b/frontend/src/Pages/AuthPages/UserLogin.css
@@ -75,6 +75,10 @@
     border-radius: 20px;
   }
 
+  .user-login-page .login-btn:hover{
+    background-color: rgb(255, 167, 167);
+  }
+
   .user-login-page .login-container a{
     text-decoration: none;
     color: red;
