--- a/frontend/src/Pages/AuthPages/UserLogin.css
+++ b/frontend/src/Pages/AuthPages/UserLogin.css
@@ -38,7 +38,7 @@
     align-items: center;
     justify-content: space-between;
     width: 450px;
-    height: 70%;
+    height: 550px;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 0 10px 2px rgb(168, 168, 168);
