--- a/frontend/src/Pages/HomePage/SearchContainer.css
+++ b/frontend/src/Pages/HomePage/SearchContainer.css
@@ -1,4 +1,4 @@
-.container{
+.search-container{
     width: 60%;
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(10px);
@@ -11,40 +11,40 @@
     margin: 50px;
 }
 
-.container .select-container{
+.search-container .select-container{
     width: 100%;
 }
 
-.container .select-container select{
+.search-container .select-container select{
     outline: none;
     width: 100px;
     font-size: 15px;
     font-weight: 500;
 }
 
-.container .search-container{
+.search-container .search-container{
     justify-content: center;
 }
 
-.container .search-container img{
+.search-container .search-container img{
     width: 70%;
     height: 70%;
 }
 
-.container .buttons-container > button{
+.search-container .buttons-container > button{
     padding: 10px;
     cursor: pointer;
     margin-top: 30px;
 }
 
-.container .buttons-container .search-btn{
+.search-container .buttons-container .search-btn{
     width: 100px;
     color: white;
     border: none;
     margin-left: 20px;
 }
 
-.container .buttons-container{
+.search-container .buttons-container{
     width: 100%;
     display: flex;
     justify-content: center;
@@ -52,7 +52,7 @@
 }
 
 @media  screen and (max-width: 820px) {
-    .container{
+    .search-container{
         width: 90%;
     }
 
@@ -60,8 +60,7 @@
 
 
 @media  screen and (max-width: 510px){
-    .container .search-form{
+    .search-container .search-form{
         grid-template-columns: 1fr;
     }
-
 }
