--- a/frontend/src/Pages/AdminPage/AdminPage.css
+++ b/frontend/src/Pages/AdminPage/AdminPage.css
@@ -4,6 +4,7 @@
     width: 100%;
     height: calc(100vh - 70px);
     position: relative;
+    background-color: rgb(250, 250, 250);
 }
 
 .admin-page > h1{
@@ -22,6 +23,7 @@
     height: 65%;
     overflow-y: auto;
     overflow-x: auto;
+    background-color: white;
     border: 2px solid rgb(235, 235, 235);
 }
 
