--- a/frontend/src/Pages/HomePage/PopularCity.css
+++ b/frontend/src/Pages/HomePage/PopularCity.css
@@ -5,7 +5,7 @@
     width: 100%;
     box-sizing: border-box;
     padding: 10px;
-    background-color: #fff2e6;
+    background-color: white;
 }
 
 .available-flights-parent > .top-div{
