--- a/frontend/src/Components/Admin/Flights/FlightForm.css
+++ b/frontend/src/Components/Admin/Flights/FlightForm.css
@@ -8,6 +8,14 @@
     height: 25px;
 }
 
+.admin-form .container.first-form .inputs{
+    display: grid;
+    margin-bottom: 20px;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    gap: 50px;
+}
+
 .admin-form .container p{
     font-size: 15px;
     color: rgb(153, 153, 153);
