--- a/frontend/src/Components/Admin/Forms/AdminForm.css
+++ b/frontend/src/Components/Admin/Forms/AdminForm.css
@@ -1,20 +1,21 @@
 .admin-form{
     position: fixed;
     top: 0;
-    bottom: 0;
-    left: 0;
     right: 0;
+    left: 0;
+    bottom: 0;
     background-color: rgb(0, 0, 0, 0.5);
     z-index: 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    overflow-y: auto;
 }
 
 .admin-form .container{
     border-radius: 20px;
     padding: 50px;
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: white;
 }
 
