--- a/frontend/src/Pages/HomePage/PopularCity.css
+++ b/frontend/src/Pages/HomePage/PopularCity.css
@@ -3,6 +3,7 @@
     align-items: center;
     flex-direction: column;
     width: 100%;
+    margin-top: 50px;
     box-sizing: border-box;
     padding: 10px;
     background-color: white;
@@ -11,6 +12,7 @@
 .available-flights-parent > .top-div{
     display: flex;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .available-flights-parent > .top-div img{
