--- a/frontend/src/Pages/HomePage/SearchContainer.css
+++ b/frontend/src/Pages/HomePage/SearchContainer.css
@@ -40,6 +40,7 @@
 .search-container .buttons-container .search-btn{
     width: 100px;
     color: white;
+    background-color: rgba(180, 180, 180, 0.4);
     border: none;
     margin-left: 20px;
 }
