--- a/frontend/src/Components/Admin/Modals/FlightModal.css
+++ b/frontend/src/Components/Admin/Modals/FlightModal.css
@@ -16,7 +16,6 @@
     background-color: white;
     padding: 50px;
     border-radius: 20px;
-    position: relative;
 }
 
 .modal-container .modal img{
@@ -62,17 +61,9 @@
 
 .modal-container .modal .view-seats{
     position: absolute;
+    padding: 10px;
     top: 20px;
     left: 50%;
     transform: translateX(-50%);
     background-color: white;
-}
-
-.modal-container .modal .view-seats .plane-head{
-    border-top-left-radius: 50%;
-    border-top-right-radius: 50%;
-    background-color: white;
-    width: 100%;
-    border: 1px solid grey;
-    border-bottom: none;
 }
