--- a/frontend/src/Components/Seats/Seats.css
+++ b/frontend/src/Components/Seats/Seats.css
@@ -4,9 +4,6 @@
     padding: 20px;
     box-sizing: border-box;
     border: 1px solid grey;
-    border-top-left-radius: 40%;
-    border-top-right-radius: 40%;
-    padding-top: 80%;
     position: relative;
     align-items: center;
 }
@@ -19,24 +16,25 @@
 .seats .seat {
     border: none;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
 }
 
-.seats .available{
-    background-color: rgb(0, 189, 25);
-    color: white;
+.seats .seat img{
+    width: 25px;
+    height: 25px;
+    margin: 0;
 }
+
 
 .seats .seat:not(:disabled):hover{
     background-color: rgb(150, 150, 150);
 }
 
 .seats .legends{
-    top: 15%;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    position: absolute;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
 }
 
 .seats .legends > div{
@@ -55,15 +53,19 @@
     margin-right: 10px;
 }
 
-.seats .legends #available{
-    background-color: rgb(0, 189, 25);
+.seats .legends #economy{
+    background-color: #00bd19;
 }
 
-.seats .legends #reserved{
-    background-color: red;
+.seats .legends #business{
+    background-color: #1381ff;
+}
+
+.seats .legends #first{
+    background-color: #ff3131;
 }
 
 .seats .close-btn{
     background-color: #ff3131;
-    margin: 10px 0;
+    margin: 20px 0;
 }
