--- a/frontend/src/Pages/AuthPages/UserSignup.css
+++ b/frontend/src/Pages/AuthPages/UserSignup.css
@@ -202,4 +202,8 @@ input[type="number"] {
     .user-signup .right-container{
         width: 100%;
     }
+
+    .user-signup .right-container .input-container{
+        width: 90%;
+    }
 }
