--- a/frontend/src/Pages/AuthPages/UserSignup.css
+++ b/frontend/src/Pages/AuthPages/UserSignup.css
@@ -36,10 +36,10 @@
     box-shadow: 0 0 20px 5px rgb(202, 202, 202);
     background-color: white;
     opacity: 0;
-    animation: container-animation 0.8s ease-in-out 1s forwards;
+    animation: signup-container-animation 0.8s ease-in-out 1s forwards;
 }
 
-@keyframes container-animation{
+@keyframes signup-container-animation{
     from{
       opacity: 0;
     }
@@ -57,6 +57,7 @@
     width: 95%;
     height: 35px;
     margin: 20px 0;
+    font-size: 15px;
 }
 
 .user-signup .right-container form{
