--- a/frontend/src/Pages/AuthPages/UserLogin.css
+++ b/frontend/src/Pages/AuthPages/UserLogin.css
@@ -32,7 +32,7 @@
     background-color: rgb(250, 250, 250);
   }
 
-  .user-login-page .login-container{
+  .user-login-page .login-container form{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -109,7 +109,7 @@
     text-decoration: underline;
   }
 
-  .user-login-page .login-container > div:last-child{
+  .user-login-page .login-container form > div:last-child{
     width: 90%;
     display: flex;
     justify-content: space-between;
@@ -138,7 +138,7 @@
         background-color: rgb(0, 0, 0, 0.10);
     }
 
-    .user-login-page .login-container{
+    .user-login-page .login-container form{
       width: 100%;
     }
 
