--- a/frontend/src/Pages/UserPage/UserHome.css
+++ b/frontend/src/Pages/UserPage/UserHome.css
@@ -4,14 +4,14 @@
 
 .user-home .city-container{
     width: 100%;
-    height: 350px;
+    height: 100vh;
     position: relative;
 }
 
 .user-home .city-container h1{
     font-size: 60px;
     position: absolute;
-    top: 30%;
+    top: 15%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
@@ -20,7 +20,7 @@
 
 .user-home .city-container .city-buttons{
     position: absolute;
-    top: 70%;
+    top: 30%;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -36,7 +36,17 @@
 
 .user-home .city{
     width: 100%;
-    height: 100%;
+    height: 40%;
+    animation: city-image-animation 0.8s ease-out forwards;
+}
+
+@keyframes city-image-animation{
+    from{
+        transform: translateX(-150px);
+    }
+    to{
+        transform: translateX(0);
+    }
 }
 
 .user-home .search-form-container{
@@ -44,11 +54,12 @@
     position: absolute;
     width: 50%;
     left: 50%;
-    top: 85%;
+    top: 35%;
     transform: translateX(-50%);
     background-color: rgb(240, 240, 240);
     border-radius: 20px;
     box-shadow: 0 0 15px 5px rgb(160, 160, 160);
+    margin-bottom: 100px;
 }
 
 .user-home .search-form-container .select-container{
