--- a/frontend/src/Pages/UserPage/UserHome.css
+++ b/frontend/src/Pages/UserPage/UserHome.css
@@ -4,7 +4,7 @@
 
 .user-home .city-container{
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 80px);
     position: relative;
 }
 
@@ -36,7 +36,7 @@
 
 .user-home .city{
     width: 100%;
-    height: 40%;
+    height: 50%;
     animation: city-image-animation 0.8s ease-out forwards;
 }
 
