--- a/frontend/src/Components/Search/SearchForm.css
+++ b/frontend/src/Components/Search/SearchForm.css
@@ -2,7 +2,7 @@
     margin-top: 20px;
     width: 100%;
     display: grid;
-    grid-template-columns: 2fr 2fr 1fr 0.5fr;
+    grid-template-columns: 2fr 2fr 2fr 0.5fr;
     background-color: white;
     box-sizing: border-box;
     border: 2px solid rgb(201, 201, 201);
@@ -10,7 +10,7 @@
 
 .search-form > div{
     background-color: white;
-    padding: 5px;
+    padding: 10px 5px;
     border-right: 1px solid rgb(180, 180, 180);
     display: flex;
     align-items: center;
