--- a/frontend/src/Pages/UserPage/SearchResults.css
+++ b/frontend/src/Pages/UserPage/SearchResults.css
@@ -88,6 +88,7 @@
     padding: 20px;
     box-sizing: border-box;
     margin-bottom: 30px;
+    border-radius: 20px;
 }
 
 .search-results .flights-container > div:first-child{
@@ -95,11 +96,13 @@
     grid-template-columns: 1fr;
     gap: 30px;
     margin-right: 50px;
+    width: 100%;
 }
 
 .search-results .flight{
     display: flex;
     width: 100%;
+    justify-content: center;
     align-items: center;
 }
 
@@ -128,7 +131,6 @@
 }
 
 .search-results .flights-container > div:last-child{
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
