--- a/frontend/src/Components/Search/SearchForm.css
+++ b/frontend/src/Components/Search/SearchForm.css
@@ -18,6 +18,7 @@
 
 .search-form > div:last-child{
     display: flex;
+    justify-content: center;
     align-items: center;
 }
 
@@ -99,16 +100,17 @@
     .search-form > div{
         border: none;
     }
+
+    .search-form{
+        grid-template-columns: 1fr;
+    }
     
     .search-form > .from-container,
     .search-form > .to-container{
         border-bottom: 1px solid rgb(180, 180, 180);
     }
 
-}
-
-@media  screen and (max-width: 510px){
-    .search-form{
-        grid-template-columns: 1fr;
+    .search-form > div:last-child{
+        
     }
 }
