--- a/frontend/src/Components/Search/SearchForm.css
+++ b/frontend/src/Components/Search/SearchForm.css
@@ -110,7 +110,7 @@
         border-bottom: 1px solid rgb(180, 180, 180);
     }
 
-    .search-form > div:last-child{
-        
+    .search-form > div:nth-child(3){
+        margin-top: 20px;
     }
 }
