--- a/frontend/src/Components/Search/SearchForm.css
+++ b/frontend/src/Components/Search/SearchForm.css
@@ -48,7 +48,7 @@
 }
 
 .search-form .remove-btn:hover{
-    background-color: rgb(255, 138, 138);
+    background-color: #ff8a8a;
 }
 
 .search-form img{
