--- a/frontend/src/Components/Seats/Seats.css
+++ b/frontend/src/Components/Seats/Seats.css
@@ -3,9 +3,27 @@
     flex-direction: column;
     padding: 20px;
     box-sizing: border-box;
-    border: 1px solid grey;
-    position: relative;
     align-items: center;
+}
+
+.seat-selection-container{
+    position: fixed;
+    background-color: rgb(0, 0, 0, 0.5);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 3;
+    overflow-y: auto;
+    display: flex;
+    justify-content: center;
+}
+
+.seat-selection{
+    position: absolute;
+    background-color: white;
+    top: 20px;
+    text-align: center;
 }
 
 .seats-rows-container{
@@ -15,9 +33,12 @@
 
 .seats .seat {
     border: none;
-    cursor: pointer;
     display: flex;
     justify-content: center;
+}
+
+.seats .seat:not(:disabled){
+    cursor: pointer;
 }
 
 .seats .seat img{
