--- a/frontend/src/Pages/UserPage/BookingPage.css
+++ b/frontend/src/Pages/UserPage/BookingPage.css
@@ -28,10 +28,11 @@
 }
 
 .booking-page > div:nth-child(2){
-    margin-top: 80px;
+    margin-top: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 20px;
 }
 
 .booking-page .container{
