--- a/frontend/src/Pages/UserPage/AvailableFlights.css
+++ b/frontend/src/Pages/UserPage/AvailableFlights.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     background-color: rgb(235, 235, 235);
-    padding: 50px;
+    padding-bottom: 30px;
 }
 
 .available-flights > div:first-child{
