--- a/frontend/src/Components/Admin/Modals/FlightModal.css
+++ b/frontend/src/Components/Admin/Modals/FlightModal.css
@@ -59,7 +59,7 @@
     background-color: #ffa3a3;
 }
 
-.modal-container .modal .view-seats{
+.modal-container .view-seats{
     position: absolute;
     padding: 10px;
     top: 20px;
