--- a/frontend/src/Components/Seats/Seats.css
+++ b/frontend/src/Components/Seats/Seats.css
@@ -11,10 +11,15 @@
     gap: 10px;
 }
 
+.seats-rows-container .letter{
+    text-align: center;
+}
+
 .seats .seat {
     border: none;
     display: flex;
     justify-content: center;
+    position: relative;
 }
 
 .seats .seat:not(:disabled){
@@ -22,9 +27,17 @@
 }
 
 .seats .seat img{
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
     margin: 0;
+}
+
+.seats .seat .check{
+    top: -7px;
+    right: -8px;
+    width: 17px;
+    height: 17px;
+    position: absolute;
 }
 
 
@@ -69,4 +82,36 @@
 .seats .close-btn{
     background-color: #ff3131;
     margin: 20px 0;
+}
+
+
+.seats .passenger-modal{
+    position: fixed;
+    top: 50vh;
+    transform: translateY(-50%);
+    z-index: 3;
+    padding: 30px;
+    border: 1px solid grey;
+    background-color: white;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.seats .passenger-modal img{
+    width: 60px;
+    height: 60px;
+}
+
+.seats .passenger-modal button{
+    background-color: #ff3131;
+    color: white;
+    border: none;
+    padding: 8px 70px;
+    cursor: pointer;
+}
+
+.seats .passenger-modal button:hover{
+    background-color: #ff9898;
 }
