--- a/frontend/src/Pages/HomePage/Home.css
+++ b/frontend/src/Pages/HomePage/Home.css
@@ -82,8 +82,7 @@
 }
 
 .home-page header .dropdown > li:hover{
-    background-color: #ff3131;
-    color: white;
+    background-color: #ffeed5;
 }
 
 .home-page .home{
