--- a/frontend/src/Pages/HomePage/About.css
+++ b/frontend/src/Pages/HomePage/About.css
@@ -3,20 +3,28 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    position: relative;
 }
 
 .about .container {
     width: 80%;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     font-family: Arial, sans-serif;
     margin: 50px;
+    opacity: 0;
+    transform: translateX(-200px);
+}
+
+.about .container h1{
+    text-align: center
 }
 
 .about .gallery-container{
     margin: 0;
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
 }
 
@@ -26,18 +34,36 @@
     margin: 10px;
     width: 300px;
     justify-content: center;
-    align-items: center;
     border: 2px solid #ddd;
     border-radius: 8px;
+    background-color: white;
 }
 
 .about .gallery img {
     width: 100%;
-    background-color: #ffe3b8;
     height: 400px;
     object-fit: cover;
 }
 
+.about .gallery div{
+    padding: 0 10px;
+}
+
+.about .gallery p{
+    color: rgb(128, 128, 128);
+    font-size: 18px;
+}
+
+.about .gallery h2{
+    margin-bottom: 5px;
+}
+
 .about .gallery h5 {
     text-align: center;
+}
+
+.about .animate{
+    opacity: 1;
+    transform: translateX(0);
+    transition: 1s ease-out;
 }
