--- a/frontend/src/Pages/UserPage/TicketPage.css
+++ b/frontend/src/Pages/UserPage/TicketPage.css
@@ -1,22 +1,25 @@
 .ticket-page{
-    padding-top: 50px;
+    width: 100%;
+    height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
 .ticket-container{
-    width: 700px;
-    min-width: 700px;
-    max-width: 700px;
+    width: 900px;
+    min-width: 900px;
+    max-width: 900px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .ticket{
     border-radius: 30px;
     background-color: #fff0db;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .ticket-header{
     height: 35px;
@@ -26,12 +29,8 @@
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
     padding: 10px;
-}
-
-.ticket-header h3{
     color: white;
 }
-
 
 .ticket-header img{
     height: 100%;
@@ -40,20 +39,16 @@
     margin-right: 15px;
 }
 
-.passenger-container{
+.passenger-ticket-container{
     padding: 5px 20px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     row-gap: 10px;
     column-gap: 20px;
 }
 
-.passenger-container p{
+.passenger-ticket-container p{
     font-size: 13px;
-}
-
-.passenger-container img{
-    width: 30px;
 }
 
 .ticket-footer{
@@ -63,6 +58,7 @@
     width: 80%;
     background-color: #ff3131;
     border-top-right-radius: 50%;
+    border-bottom-left-radius: 30px;
     height: 35px;
     color: white;
 }
@@ -72,7 +68,50 @@
     margin: 0 15px;
 }
 
-.ticket-container button{
+.boarding-pass{
+    width: 300px;
+    border-radius: 30px;
+    background-color: #fff0db;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.boarding-pass > h3{
+    border-left: 2px dashed #000000;
+    margin: 0;
+    padding: 10px 0;
+}
+
+.boarding-pass .flight-info{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    border-left: 2px dashed #000000;
+}
+
+.boarding-pass .qr-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 150px;
+    border-left: 2px dashed #000000;
+}
+
+.boarding-pass .ticket-header{
+    justify-content: center;
+}
+
+.boarding-pass > div:last-child{
+    height: 30px;
+    background-color: #ff3131;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+}
+
+.ticket-page button{
     margin-top: 50px;
     background-color: #ff3131;
     color: white;
@@ -82,12 +121,14 @@
     cursor: pointer;
 }
 
-.ticket-container button:hover{
+.ticket-page button:hover{
     background-color: #ffbcbc;
 }
 
-@media (max-width: 750px){
+@media (max-width: 900px){
     .ticket-page{
-        justify-content: start;
+        align-items: start;
+        padding-left: 30px;
+        padding-right: 30px;
     }
 }
