--- a/frontend/src/Pages/UserPage/TicketPage.css
+++ b/frontend/src/Pages/UserPage/TicketPage.css
@@ -43,6 +43,7 @@
     padding: 5px 20px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    align-items: center;
     row-gap: 10px;
     column-gap: 20px;
 }
