--- a/frontend/src/Pages/HomePage/About.css
+++ b/frontend/src/Pages/HomePage/About.css
@@ -7,18 +7,43 @@
 }
 
 .about .container {
-    width: 80%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     font-family: Arial, sans-serif;
-    margin: 50px;
     opacity: 0;
     transform: translateX(-200px);
 }
 
-.about .container h1{
-    text-align: center
+.about header img{
+    height: 60px;
+}
+
+.about header{
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
+    z-index: 2;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.about header h2{
+    color: #ff3131;
+}
+
+.about header span{
+    color: #ffbd59;
+}
+
+.about h1{
+    text-align: center;
+    margin-top: 80px;
 }
 
 .about .gallery-container{
