--- a/frontend/src/styles/BookingPage.css
+++ b/frontend/src/styles/BookingPage.css
@@ -3,6 +3,10 @@
     height: calc(100vh - 80px);
 }
 
+.booking-page.admin{
+    padding-top: 70px;
+}
+
 .booking-page > div:first-child{
     display: flex;
     flex-wrap: wrap;
@@ -68,11 +72,23 @@
     color: rgb(165, 165, 165);
 }
 
+.booking-page .container .booked-by-container{
+    color: rgb(165, 165, 165);
+    margin: 30px 0;
+}
+
+.booking-page .container .booked-by-container input{
+    outline: none;
+    height: 20px;
+    width: 160px;
+    display: block;
+    margin-top: 5px;
+}
+
 .booking-page .next-btn{
     display: block;
-    float: right;
     padding: 7px 50px;
-    margin-top: 20px;
+    margin: 30px auto 0 auto;
     font-size: 15px;
 }
 
